    reduce_parity() for further simplifications.

  - The code for checking recurrence/persistence properties can also
    use the fact the reduce_parity() with return "Inf(0)" (or "t" or
    "f") for deterministic automata corresponding to recurrence
    properties, and "Fin(0)" (or "t" or "f") for persistence
    properties.  This can be altered with the SPOT_PR_CHECK
    environment variable.

  Backward incompatibilities:

  - The virtual function twa::intersecting_run() no longuer takes a
    second "from_other" Boolean argument.  This is a backward
    incompatibility only for code that overrides this function in a
    subclass.  For backward compatibility with programs that simply
    call this function with two argument, a non-virtual version of the
    function has been introduced and marked as deprecated.

  Bugs fixed:

  - The gf_guarantee_to_ba() is relying on an inplace algorithm that
    could produce a different number of edges for the same input in
    two different transition order.

  - A symmetry-based optimization of the LAR algorithm performed in
    spot::to_parity() turned out to be incorrect.  The optimization
    has been removed.  "ltlsynt --algo=lar" is the only code using
    this function currently.

New in spot 2.7.5 (2019-06-05)

  Build:

  - Although the Python bindings in this release are still done with
    Swig3.0, the code has been updated to be compatible with Swig4.0.

  Library:

  - print_dot will replace labels that have more 2048 characters by a
    "(label too long)" string.  This works around a limitation of
    GraphViz that aborts when some label exceeds 16k characters, and
    also helps making large automata more readable.

  Bugs fixed:

  - spot::translator was not applying Boolean sub-formula rewritting
    by default unless a spot::option_map was passed.  This caused some
    C++ code for translating certains formulas to be noticeably slower
    than the equivalent call to the ltl2tgba binary.
