@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2014, 2015, 2017 Laboratoire de Recherche et
+# Copyright (C) 2014, 2015, 2017, 2019 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -39,7 +39,7 @@ Inf(0)&Inf(1)&Inf(2)&Inf(3)
 #3: {0,2,3}
 #1: {0}
 #4: {0,1,2,3}
-#0: empty
+#0: {}
 #5: {0,1,2,3,4} accepting
 #2: {1,2}
 5 + 5 = 10
@@ -48,14 +48,14 @@ Inf(0)&Inf(1)&Inf(2)&Inf(3)
 #7: {0,1,2,3,4,6,7}
 #10: {0,1,2,3,4,5,6,7,8,9} accepting
 0,1,2,3,4,5,6,7,8,9
-#0: empty accepting
-#0: empty accepting
+#0: {} accepting
+#0: {} accepting
 #1: {3}
 #4: {0,1,2,3}
 #2: {0,2}
 stripping
 #2: {0,2}
-#0: empty
+#0: {}
 #2: {0,3}
 #1: {1}
 #2: {1,2}
